add some my code (just test,in the future,it will delete)

--- a/src/main/resources/assets/gti/lang/en_US.lang
+++ b/src/main/resources/assets/gti/lang/en_US.lang
@@ -21,3 +21,6 @@ item.DenseDiamondPlate.name= Dense Diamond Plate
 
 //----Ore
 tile.iridiumore.name=Iridium Ore
+
+//----Gxy
+tile.gxyBlock.name=gxy Block
