--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -10,6 +10,7 @@ gui.gti.GenGasKu=燃气动能发生机
 gui.gti.CarbonizeFurnace=碳化燃烧炉
 
 //blocks
+tile.gti.block.CompressedWaterHyacinth.name=压缩水葫芦
 tile.gti.block.oreIridium.name=铱矿石
 tile.gti.block.WaterHyacinth.name=水葫芦
 tile.gti.block.GenGasKu.name=燃气动能发生机
@@ -48,6 +49,8 @@ item.gti.tool.CarbonTreetap.name=碳板龙头
 item.gti.BambooCharcoal.name=竹炭
 item.gti.AirBrakeUnit.name=气闸单元
 item.gti.AirBrakeCasing.name=气闸外壳
+
+item.gti.SmallCompressedWaterHyacinth.name=小块压缩水葫芦
 
 //achievement
 achievement.CarbonizeFurnace=缺氧燃烧技术
