--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -64,5 +64,5 @@ achievement.getIrOre.desc=挖到一个铱矿石
 //tooltip
 gti.tooltip.CarbonizeFurnace=缺氧燃烧，燃烧能力有限
 gti.tooltip.item.record.record_TheSaltwaterRoom.desc1=充满海水的房间
-gti.tooltip.item.record.record_TheSaltwaterRoom.desc2=By Owl City
+gti.tooltip.item.record.record_TheSaltwaterRoom.desc2=Owl City
 
