--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -110,6 +110,7 @@ item.gti.CarbonTube.desc1=一条黑色而坚韧的细线
 item.gti.food.DiamondApple.desc1=你确定你敢吃？
 
 //---Food
+item.gti.RollingPin.name=擀面杖
 item.gti.SaltyYolk.name=咸蛋黄
 item.gti.SaltyEgg.name=咸蛋
 item.gti.Celery.name=芹菜
