Receipe and Celery

--- a/src/main/resources/assets/gti/lang/en_US.lang
+++ b/src/main/resources/assets/gti/lang/en_US.lang
@@ -75,11 +75,15 @@ tile.PorkFriedDumplings.name=Pork Fried Dumplings
 tile.CarrotiletAndPorkFriedDumplings.name=Carrot And Pork Fried Dumplings  
 tile.CeleryAndPorkFriedDumplings.name=Celery And Pork Fried Dumplings
 tile.CarrotAndBeefFriedDumplings.name=Carrot And Beef Fried Dumplings 
-tile.CeleryAndBeefFriedDumplings.name=Celery And BeefFried Dumplings 
-tile.RedBeanPasteStickyRiceBalls.name=Red Bean PasteSticky Rice Balls  
-tile.WriteSesameStickyRiceBalls.name=Write Sesame Sticky Rice Balls
+tile.CeleryAndBeefFriedDumplings.name=Celery And Beef Fried Dumplings 
+tile.RedBeanPasteStickyRiceBalls.name=Red Bean Paste Sticky Rice Balls  
+tile.WhiteSesameStickyRiceBalls.name=White Sesame Sticky Rice Balls
 tile.BlackSesameStickyRiceBalls.name=Black Sesame Sticky Rice Balls
 tile.SugerStickyRiceBalls.name=Suger Sticky RiceBalls
+tile.ABowlOfRedBeanPasteStickyRiceBalls.name=A Bowl Of Red Bean Paste Sticky Rice Balls
+tile.ABowlOfWhiteSesameStickyRiceBalls.name=A Bowl Of White Sesame Sticky Rice Balls
+tile.ABowlOfBlackSesameStickyRiceBalls.name=A Bowl Of Black Sesame Sticky Rice Balls
+tile.ABowlOfSugerStickyRiceBalls.name=A Bowl Of Suger Sticky Rice Balls
 tile.WhiteFlapjack.name=White Flapjack
 tile.SweetFlapjack.name=Sweet Flapjack
 tile.SaltyFlapjack.name=Salty Flapjack
@@ -95,4 +99,6 @@ tile.ABowlOfBeefWonton.name=A Bowl Of Beef Wonton
 tile.ABowlOfPorkWonton.name=A Bowl Of Pork Wonton
 tile.PumpkinMoonCake.name=Pumpkin Moon Cake
 tile.SaltyYolkMoonCake.name=SaltyYolk MoonCake
+tile.RollingPin.name=Rolling Pin
+tile.RedBeanPowder.name=Red Bean Powder
 
