--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -150,9 +150,13 @@ item.gti.CeleryAndPorkFriedDumplings.name=大肉芹菜煎饺
 item.gti.CarrotAndBeefFriedDumplings.name=牛肉萝卜煎饺
 item.gti.CeleryAndBeefFriedDumplings.name=牛肉芹菜煎饺
 item.gti.RedBeanPasteStickyRiceBalls.name=红豆沙汤圆
-item.gti.WriteSesameStickyRiceBalls.name=白芝麻汤圆
+item.gti.WhiteSesameStickyRiceBalls.name=白芝麻汤圆
 item.gti.BlackSesameStickyRiceBalls.name=黑芝麻汤圆
 item.gti.SugerStickyRiceBalls.name=糖心汤圆
+item.gti.ABowlOfRedBeanPasteStickyRiceBalls.name=一碗红豆沙汤圆
+item.gti.ABowlOfWhiteSesameStickyRiceBalls.name=一碗白芝麻汤圆
+item.gti.ABowlOfBlackSesameStickyRiceBalls.name=一碗黑芝麻汤圆
+item.gti.ABowlOfSugerStickyRiceBalls.name=一碗糖心汤圆
 item.gti.WhiteFlapjack.name=白饼
 item.gti.SweetFlapjack.name=糖饼
 item.gti.SaltyFlapjack.name=咸饼
@@ -168,4 +172,5 @@ item.gti.ABowlOfBeefWonton.name=一碗牛肉馄饨
 item.gti.ABowlOfPorkWonton.name=一碗大肉馄饨
 item.gti.PumpkinMoonCake.name=南瓜月饼
 item.gti.SaltyYolkMoonCake.name=咸蛋黄月饼
-
+item.gti.RollingPin.name=擀面杖
+item。gti.RedBeanPowder.name=红豆粉
