Still is Receipe

--- a/src/main/resources/assets/gti/lang/en_US.lang
+++ b/src/main/resources/assets/gti/lang/en_US.lang
@@ -38,6 +38,8 @@ tile.DehydratedWaterHyacinthBlock.name=Dehydrated Water Hyacinth Block
 tile.SmallCompressedWaterHyacinth.name=Small Compressed Water Hyacinth
 
 //---Food
+tile.SeedOil.name=Seed Oil
+tile.FryingPan.name=Frying Pan
 tile.RollingPin.name=Rolling Pin
 tile.SaltyYolk.name=Salty Yolk
 tile.SaltyEgg.name=Salty Egg  
@@ -56,22 +58,16 @@ tileThinSkinned.name=Thin Skinned
 tile.pumpkinBlock.name=Pumpkin Block
 tile.carrotDumplings.name=Carrot Dumplings
 tile.celeryDumplings.name=Celery Dumplings
-tile.beefDumplings.name=beef Dumplings
-tile.porkDumplings.name=Pork Dumplings
 tile.BeefAndCeleryDumplings.name=Beef And Celery Dumplings 
 tile.BeefAndCarrotDumplings.name=Beef And Carrot Dumplings 
 tile.PorkAndCeleryDumplings.name=Pork And Celery Dumplings
 tile.PorkAndCarrotDumplings.name=Pork And Carrot Dumplings 
 tile.ABowlOfCarrotDumplings.name=ABowl Of Carrot Dumplings 
 tile.ABowlOfCeleryDumplings.name=ABowl Of Celery Dumplings
-tile.ABowlOfBeefDumplings.name=ABowl Of Beef Dumplings
-tile.ABowlOfPorkDumplings.name=ABowl Of Pork Dumplings 
 tile.ABowlOfBeefAndCeleryDumplings.name=A Bowl Of Beef And Celery Dumplings
 tile.ABowlOfBeefAndCarrotDumplings.name=A Bowl Of Beef And Carrot Dumplings
 tile.ABowlOfPorkAndCeleryDumplings.name=A Bowl Of Pork And Celery Dumplings 
 tile.ABowlOfPorkAndCarrotDumplings.name=A Bowl Of Pork And Carrot Dumplings
-tile.BeefFriedDumplings.name=Beef Fried Dumplings 
-tile.PorkFriedDumplings.name=Pork Fried Dumplings
 tile.CarrotiletAndPorkFriedDumplings.name=Carrot And Pork Fried Dumplings  
 tile.CeleryAndPorkFriedDumplings.name=Celery And Pork Fried Dumplings
 tile.CarrotAndBeefFriedDumplings.name=Carrot And Beef Fried Dumplings 
