--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -110,6 +110,8 @@ item.gti.CarbonTube.desc1=一条黑色而坚韧的细线
 item.gti.food.DiamondApple.desc1=你确定你敢吃？
 
 //---Food
+item.gti.SeedOil.name=种子油
+item.gti.FryingPan.name=煎锅
 item.gti.RollingPin.name=擀面杖
 item.gti.SaltyYolk.name=咸蛋黄
 item.gti.SaltyEgg.name=咸蛋
@@ -129,22 +131,16 @@ item.gti.ThinSkinned。name=馄饨皮
 item.gti.PumpkinBlock.name=南瓜块
 item.gti.CarrotDumplings.name=胡萝卜饺子
 item.gti.CeleryDumplings.name=芹菜饺子
-item.gti.BeefDumplings.name=牛肉饺子
-item.gti.PorkDumplings.name=大肉饺子
 item.gti.BeefAndCeleryDumplings.name=牛肉芹菜饺子
 item.gti.BeefAndCarrotDumplings.name=萝卜牛肉饺子
 item.gti.PorkAndCeleryDumplings.name=大肉芹菜饺子
 item.gti.PorkAndCarrotDumplings.name=大肉萝卜饺子
 item.gti.ABowlOfCarrotDumplings.name=一碗萝卜饺子
 item.gti.ABowlOfCeleryDumplings.name=一碗芹菜饺子
-item.gti.ABowlOfBeefDumplings.name=一碗牛肉饺子
-item.gti.ABowlOfPorkDumplings.name=一碗大肉饺子
 item.gti.ABowlOfBeefAndCeleryDumplings.name=一碗牛肉芹菜饺子
 item.gti.ABowlOfBeefAndCarrotDumplings.name=一碗牛肉萝卜饺子
 item.gti.ABowlOfPorkAndCeleryDumplings.name=一碗大肉芹菜饺子
 item.gti.ABowlOfPorkAndCarrotDumplings.name=一碗大肉萝卜饺子
-item.gti.BeefFriedDumplings.name=牛肉煎饺
-item.gti.PorkFriedDumplings.name=大肉煎饺
 item.gti.CarrotAndPorkFriedDumplings.name=大肉萝卜煎饺
 item.gti.CeleryAndPorkFriedDumplings.name=大肉芹菜煎饺
 item.gti.CarrotAndBeefFriedDumplings.name=牛肉萝卜煎饺
