aaaaa!  Fuck RECEIPE!!!!

--- a/src/main/resources/assets/gti/lang/en_US.lang
+++ b/src/main/resources/assets/gti/lang/en_US.lang
@@ -75,7 +75,7 @@ tile.CeleryAndBeefFriedDumplings.name=Celery And Beef Fried Dumplings
 tile.RedBeanPasteStickyRiceBalls.name=Red Bean Paste Sticky Rice Balls  
 tile.WhiteSesameStickyRiceBalls.name=White Sesame Sticky Rice Balls
 tile.BlackSesameStickyRiceBalls.name=Black Sesame Sticky Rice Balls
-tile.SugerStickyRiceBalls.name=Suger Sticky RiceBalls
+tile.SugerStickyRiceBalls.name=Sugar Sticky RiceBalls
 tile.ABowlOfRedBeanPasteStickyRiceBalls.name=A Bowl Of Red Bean Paste Sticky Rice Balls
 tile.ABowlOfWhiteSesameStickyRiceBalls.name=A Bowl Of White Sesame Sticky Rice Balls
 tile.ABowlOfBlackSesameStickyRiceBalls.name=A Bowl Of Black Sesame Sticky Rice Balls
