--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -148,7 +148,7 @@ item.gti.CeleryAndBeefFriedDumplings.name=牛肉芹菜煎饺
 item.gti.RedBeanPasteStickyRiceBalls.name=红豆沙汤圆
 item.gti.WhiteSesameStickyRiceBalls.name=白芝麻汤圆
 item.gti.BlackSesameStickyRiceBalls.name=黑芝麻汤圆
-item.gti.SugerStickyRiceBalls.name=糖心汤圆
+item.gti.SugarStickyRiceBalls.name=糖心汤圆
 item.gti.ABowlOfRedBeanPasteStickyRiceBalls.name=一碗红豆沙汤圆
 item.gti.ABowlOfWhiteSesameStickyRiceBalls.name=一碗白芝麻汤圆
 item.gti.ABowlOfBlackSesameStickyRiceBalls.name=一碗黑芝麻汤圆
