--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -115,11 +115,11 @@ item.gti.FryingPan.name=煎锅
 item.gti.RollingPin.name=擀面杖
 item.gti.SaltyYolk.name=咸蛋黄
 item.gti.SaltyEgg.name=咸蛋
-item.gti.Celery.name=芹菜
-item.gti.RedBean.name=红豆
+item.gti.block.Celery.name=芹菜
+item.gti.block.RedBean.name=红豆
 item.gti.WhiteSesame.name=白芝麻
-item.gti.BlackSesame.name=黑芝麻
-item.gti.StickyRice.name=糯米
+item.gti.block.BlackSesame.name=黑芝麻
+item.gti.block.StickyRice.name=糯米
 item.gti.WheatFlour.name=小麦粉
 item.gti.Dough.name=面团
 item.gti.StickyRiceFlour.name=糯米粉
@@ -158,7 +158,6 @@ item.gti.SweetFlapjack.name=糖饼
 item.gti.SaltyFlapjack.name=咸饼
 item.gti.DoubleFlapjack.name=双层煎饼
 item.gti.DoubleWhiteFlapjack.name=双层白饼
-item.gti.DoubleSugerFlapjack.name=双层白饼
 item.gti.DoubleSaltyFlapjack.name=双层咸煎饼
 item.gti.PorkChineseHamburger.name=大肉肉夹馍
 item.gti.BeefChineseHamburger.name=牛肉肉夹馍
