--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -113,63 +113,8 @@ item.gti.CarbonTube.desc1=一条黑色而坚韧的细线
 
 item.gti.food.DiamondApple.desc1=你确定你敢吃？
 
-//---Food
-item.gti.SeedOil.name=种子油
-item.gti.FryingPan.name=煎锅
-item.gti.RollingPin.name=擀面杖
-item.gti.SaltyYolk.name=咸蛋黄
-item.gti.SaltyEgg.name=咸蛋
-item.gti.block.Celery.name=芹菜
-item.gti.block.RedBean.name=红豆
-item.gti.WhiteSesame.name=白芝麻
-item.gti.block.BlackSesame.name=黑芝麻
-item.gti.block.StickyRice.name=糯米
-item.gti.WheatFlour.name=小麦粉
-item.gti.Dough.name=面团
-item.gti.StickyRiceFlour.name=糯米粉
-item.gti.StickyRiceBalls.name=糯米团
-item.gti.RedBeanPaste.name=红豆沙
-item.gti.DumplingSkin.name=饺子皮
-item.gti.Bread.name=面饼
-item.gti.ThinSkinned。name=馄饨皮
-item.gti.PumpkinBlock.name=南瓜块
-item.gti.CarrotDumplings.name=胡萝卜饺子
-item.gti.CeleryDumplings.name=芹菜饺子
-item.gti.BeefAndCeleryDumplings.name=牛肉芹菜饺子
-item.gti.BeefAndCarrotDumplings.name=萝卜牛肉饺子
-item.gti.PorkAndCeleryDumplings.name=大肉芹菜饺子
-item.gti.PorkAndCarrotDumplings.name=大肉萝卜饺子
-item.gti.ABowlOfCarrotDumplings.name=一碗萝卜饺子
-item.gti.ABowlOfCeleryDumplings.name=一碗芹菜饺子
-item.gti.ABowlOfBeefAndCeleryDumplings.name=一碗牛肉芹菜饺子
-item.gti.ABowlOfBeefAndCarrotDumplings.name=一碗牛肉萝卜饺子
-item.gti.ABowlOfPorkAndCeleryDumplings.name=一碗大肉芹菜饺子
-item.gti.ABowlOfPorkAndCarrotDumplings.name=一碗大肉萝卜饺子
-item.gti.CarrotAndPorkFriedDumplings.name=大肉萝卜煎饺
-item.gti.CeleryAndPorkFriedDumplings.name=大肉芹菜煎饺
-item.gti.CarrotAndBeefFriedDumplings.name=牛肉萝卜煎饺
-item.gti.CeleryAndBeefFriedDumplings.name=牛肉芹菜煎饺
-item.gti.RedBeanPasteStickyRiceBalls.name=红豆沙汤圆
-item.gti.WhiteSesameStickyRiceBalls.name=白芝麻汤圆
-item.gti.BlackSesameStickyRiceBalls.name=黑芝麻汤圆
-item.gti.SugarStickyRiceBalls.name=糖心汤圆
-item.gti.ABowlOfRedBeanPasteStickyRiceBalls.name=一碗红豆沙汤圆
-item.gti.ABowlOfWhiteSesameStickyRiceBalls.name=一碗白芝麻汤圆
-item.gti.ABowlOfBlackSesameStickyRiceBalls.name=一碗黑芝麻汤圆
-item.gti.ABowlOfSugerStickyRiceBalls.name=一碗糖心汤圆
-item.gti.WhiteFlapjack.name=白饼
-item.gti.SweetFlapjack.name=糖饼
-item.gti.SaltyFlapjack.name=咸饼
-item.gti.DoubleFlapjack.name=双层煎饼
-item.gti.DoubleWhiteFlapjack.name=双层白饼
-item.gti.DoubleSaltyFlapjack.name=双层咸煎饼
-item.gti.PorkChineseHamburger.name=大肉肉夹馍
-item.gti.BeefChineseHamburger.name=牛肉肉夹馍
-item.gti.BeefWonton.name=牛肉馄饨
-item.gti.PorkWonton.name=大肉馄饨
-item.gti.ABowlOfBeefWonton.name=一碗牛肉馄饨
-item.gti.ABowlOfPorkWonton.name=一碗大肉馄饨
-item.gti.PumpkinMoonCake.name=南瓜月饼
-item.gti.SaltyYolkMoonCake.name=咸蛋黄月饼
-item.gti.RollingPin.name=擀面杖
-item。gti.RedBeanPowder.name=红豆粉
+[POTION]
+gti.potion.Salty=好咸
+
+[DEATH]
+death.attack.salty=%1$s 被咸死了
