GenGasKu to FluidKineticGenerator

--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -6,14 +6,14 @@
 itemGroup.GoodTime-Industrial=GoodTime Industrial
 
 [GUI]
-gui.gti.GenGasKu=燃气动能发生机
+gui.gti.FluidKineticGenerator=流体动能发生机
 gui.gti.CarbonizeFurnace=碳化燃烧炉
 
 [BLOCKS]
 tile.gti.block.CompressedWaterHyacinth.name=压缩水葫芦
 tile.gti.block.oreIridium.name=铱矿石
 tile.gti.block.WaterHyacinth.name=水葫芦
-tile.gti.block.GenGasKu.name=燃气动能发生机
+tile.gti.block.FluidKineticGenerator.name=流体动能发生机
 tile.gti.block.CarbonizeFurnace.name=碳化燃烧炉
 tile.gti.block.DehydratedWaterHyacinthBlock.name=脱水水葫芦块
 tile.gti.block.EVSU.name=EVSU
